This is a changelog for developers only, not for ordinary users.

30/12/2000
        - Added Step Insert and Step Delete commands.

29/12/2000
        - Capture mouse events while dragging the cursor under linux.
        - HTML Dialog improvements under linux.

28/12/2000
        - Click on "Last Step" goes to the last used step instead of step 255.
        - Save HTML dialog options.

24/12/2000
        - Fixed piece combo under linux.

20/12/2000
        - Fixed crash when saving pictures of multiple steps.

================================================================================
                                  Version 0.73
================================================================================

18/12/2000
	- Fixed win32 help file.

17/12/2000
	- Fixed win2k startup crash.

16/12/2000
        - Fixed AVI saving.
        - Fixed rotation bug.

15/12/2000
        - Fixed small bug in the texture font.

03/12/2000
        - Added Save Picture dialog to the linux version.
        - Added an overwrite prompt when saving a project under linux.

02/12/2000
        - Added project loading preview to the linux version.

24/11/2000
        - Renamed several functions from the Matrix class.
        - Added const to several functions.

23/11/2000
        - Now all object classes have a Select () function.

18/11/2000
        - Fixed animation playback under linux.
        - Fixed Z buffer bug in the piece preview.
        - Fixed blending in piece preview.

12/11/2000
        - Added the PtrArray class.
        - Started adding the internal messaging system.
        - Link with g++ instead of gcc.
        - Moved all keyframer functions to the Object class.

09/11/2000
        - First implementation of the light classes.
        - Added a const float* operator to the Vector class.
        - Added functions to create transformation matrixes.
        - Faster rendering of the camera objects.
        - Added new minifig pieces.

01/10/2000