@@ -1,5 +1,16 @@
 This is a changelog for developers only, not for ordinary users.
 
+07/01/2000
+        - Added a new command to create floating views of the project
+
+05/01/2000
+        - Added a new cross platform class for handling OpenGL windows
+        - Added a new base window class for handling top level windows
+
+02/01/2000
+        - Linux PPC fixes - LeoCAD now works on big endian computers !
+          Thanks to Lon Shapiro for allowing me to use his Mac for debugging.
+
 30/12/2000
         - Added Step Insert and Step Delete commands.
 
